--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "dotenv": "8.2.0",
     "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^1.2.0"
+    "tailwindcss": "^1.2.0",
+    "@tailwindcss/ui": "^0.1.3"
   }
 }
